--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1202,7 +1202,11 @@ var display = (async function(){
 	//canvas_4(contract_ID2, tokenID2, address, i, i, box2).catch(function(error){ canvas_3(contract_bal.methods.tokens_image2xy, i, address, j, 10, box2);})
 	var err2_ = isError(canvas_4(contract_ID2, tokenID2, address, i, i, box2));
 	console.log(err2_);
+	if(err2_ == false){
 	canvas_4(contract_ID2, tokenID2, address, i, i, box2);
+	}else{
+		canvas_3(contract_bal.methods.tokens_image2xy, i, address, j, 10, box2);
+	}
 	<!-- try { -->
 	<!-- //canvas_4(contract_ID2, tokenID2, address, j, 10, box2); -->
 	<!-- canvas_4(contract_ID2, tokenID2, address, i, i, box2).catch(function(error) { canvas_3(contract_bal.methods.tokens_image2xy, i, address, j, 10, box2);} -->
