--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1157,7 +1157,11 @@ var display = (async function(){
 		//canvas_4(contract_ID1, tokenID, address, i, i, box1).catch(function(error){canvas_3(contract_bal.methods.tokens_image1xy, i, address, j, -10, box1); });
 		var err_ = isError(canvas_4(contract_ID1, tokenID, address, i, i, box1));
 		console.log(err_);
+		if(err_ == false){
 		canvas_4(contract_ID1, tokenID, address, i, i, box1);
+		}else{
+			canvas_3(contract_bal.methods.tokens_image1xy, i, address, j, -10, box1);
+		}
 		<!-- try { -->
 		<!-- //canvas_4(contract_ID1, tokenID, address, j, -10, box1); -->
 		<!-- canvas_4(contract_ID1, tokenID, address, i, i, box1).catch(function(error)){canvas_3(contract_bal.methods.tokens_image1xy, i, address, j, -10, box1); } -->
@@ -1200,7 +1204,7 @@ var display = (async function(){
 	array_tokenID2.push(tokenID2);
 	
 	//canvas_4(contract_ID2, tokenID2, address, i, i, box2).catch(function(error){ canvas_3(contract_bal.methods.tokens_image2xy, i, address, j, 10, box2);})
-	var err2_ = isError(canvas_4(contract_ID2, tokenID2, address, i, i, box2));
+	//var err2_ = isError(canvas_4(contract_ID2, tokenID2, address, i, i, box2));
 	console.log(err2_);
 	if(err2_ == false){
 	canvas_4(contract_ID2, tokenID2, address, i, i, box2);
