--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1204,7 +1204,7 @@ var display = (async function(){
 	array_tokenID2.push(tokenID2);
 	
 	//canvas_4(contract_ID2, tokenID2, address, i, i, box2).catch(function(error){ canvas_3(contract_bal.methods.tokens_image2xy, i, address, j, 10, box2);})
-	//var err2_ = isError(canvas_4(contract_ID2, tokenID2, address, i, i, box2));
+	var err2_ = isError(canvas_4(contract_ID2, tokenID2, address, i, i, box2));
 	console.log(err2_);
 	if(err2_ == false){
 	canvas_4(contract_ID2, tokenID2, address, i, i, box2);
