--- a/unstoppabledomain.html
+++ b/unstoppabledomain.html
@@ -156,7 +156,7 @@ web3.eth.net.isListening()
     }
   };
   xhttp.open("GET", _image, true);
-  xhttp.setRequestHeader('Authorization', '5aFbXbAGl2zzm5t6mejb6WZPpfbn1vHb');
+  xhttp.setRequestHeader('Authorization', 'Bearer 5aFbXbAGl2zzm5t6mejb6WZPpfbn1vHb');
   //xhttp.setRequestHeader('Access-Control-Allow-Headers', '*');
   //xhttp.setRequestHeader('Content-type', 'image/jpeg');
   //xhttp.responseType = 'blob'
