--- a/unstoppabledomain.html
+++ b/unstoppabledomain.html
@@ -144,7 +144,7 @@ web3.eth.net.isListening()
 	  //this.open("get", _image, true);
       //this.setRequestHeader('Access-Control-Allow-Origin', '*')
 	  var response = this;
-	  alert(response);
+	  alert(response.records);
 	  //var urlCreator = this.blob; 
 	  //var blobObj = new Blob([atob(this.blob)], { type: "image/jpeg" });
   
