--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1214,7 +1214,8 @@ var display = (async function(){
 	}
 	
 	var trade_bool = await contract_bal.methods.debt_obligation_listx(i, address).call();
-	container.insertAdjacentHTML('beforeend', '<p style="color:#5F6C6D; font-family: helvetica narrow, sans-serif;">  barter accepted: ' + trade_bool + '</p>')
+	container.insertAdjacentHTML('beforeend', '<p style="color:#5F6C6D; font-family: helvetica narrow, sans-serif;">  barter accepted: ' + trade_bool + '</p>');
+	container.insertAdjacentHTML('afterend', '');
 	
 	var _i = (i)
 	var newBtn = document.createElement('input');
