--- a/create_nft_swap_form_polygonx_live_v4.html
+++ b/create_nft_swap_form_polygonx_live_v4.html
@@ -163,7 +163,7 @@ display: block;
 
 </div>
 
-<input type="button" value="Show Answers" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="to_approve()"/>	
+<input type="button" value="Show Answers" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="image_path()"/>	
 
 <div id="content1"></div>
 <div id="content2"></div>
@@ -1155,7 +1155,7 @@ var _image = (async function(){
 	var contract_ID2 = localStorage.getItem("NFT_contract2");
 	var tokenID2 = localStorage.getItem("NFT_Token_ID2");
 	//var add1x = localStorage.getItem("mySharedData");
-
+		canvas_4 (contract_ID1, tokenID, 1)
 	try {
 			//var image = await image_and_name(contract_ID1, tokenID, getImage);
 			canvas_4 (contract_ID1, tokenID, 1)
