--- a/create_nft_swapx_polygon_live_v2.html
+++ b/create_nft_swapx_polygon_live_v2.html
@@ -1128,7 +1128,7 @@ var display = (async function(){
 	var contract_ID1 = await contract_bal.methods.token_contracts_list1xy(i, address, j).call();
 	var tokenID = await contract_bal.methods.tokens_list1xy(i, address, j).call();
 	
-	var name = await new web3.eth.Contract(abi, contract_ID1).methods.name().call();
+	//var name = await new web3.eth.Contract(abi, contract_ID1).methods.name().call();
 	
 		
 		canvas_4(contract_ID1, tokenID, address, i, i, box1);
