--- a/create_nft_swapx_polygon_live_v2.html
+++ b/create_nft_swapx_polygon_live_v2.html
@@ -1164,7 +1164,7 @@ var display = (async function(){
 	array_contract_ID2.push("'" + contract_ID2 + "'");
 	
 	
-	var name2 = await new web3.eth.Contract(abi, contract_ID2).methods.name().call();
+	//var name2 = await new web3.eth.Contract(abi, contract_ID2).methods.name().call();
 	
 	
 	
