--- a/create_nft_swapx_polygon_live_v2.html
+++ b/create_nft_swapx_polygon_live_v2.html
@@ -1422,12 +1422,13 @@ var acct = (async function(){
 	var contract_address = web3.utils.toChecksumAddress(k);
 	var contract_bal = await new web3.eth.Contract(abi, contract_address);
     var lnk = await contract_bal.methods.uri(num1).call();
-	console.log(lnk);
-  if (lnk.substring(0,4) == "ipfs"){
-	lnk = 'https://ipfs.io/ipfs/' + lnk.slice(7)
-	}
 	
+  <!-- if (lnk.substring(0,4) == "ipfs"){ -->
+	<!-- lnk = 'https://ipfs.io/ipfs/' + lnk.slice(7) -->
+	<!-- } -->
+	lnk.replace('{id}', num1);
 	const params = { 'theUrl': lnk };
+	console.log(lnk);
 	const metadata = await Moralis.Cloud.run("fetchJSON", params);
 
 	<!-- const str = JSON.stringify(metadata.data.image); -->
