--- a/create_nft_swapx_polygon_live_v2.html
+++ b/create_nft_swapx_polygon_live_v2.html
@@ -25,9 +25,10 @@ cursor: pointer;
 
 div {
 padding: 10px;
+width: 344;
 border-radius: 25px;
 border: 2px solid #5F6C6D;
-background-color: powderblue;
+background-color: peachpuff;
 
 
 }
@@ -55,6 +56,7 @@ font-family: helvetica narrow;
 
 center {
 
+padding: 10px;
 color:grey; 
 font-family: helvetica narrow; 
 font-size: large;
