--- a/create_nft_swapx_polygon_live_v2.html
+++ b/create_nft_swapx_polygon_live_v2.html
@@ -25,7 +25,6 @@ cursor: pointer;
 
 div {
 padding: 10px;
-width: 1284;
 border-radius: 25px;
 border: 2px solid #5F6C6D;
 background-color: peachpuff;
@@ -57,6 +56,7 @@ font-family: helvetica narrow;
 center {
 
 padding: 10px;
+border-radius: 25px;
 color:grey; 
 font-family: helvetica narrow; 
 font-size: large;
