--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -27,7 +27,7 @@ div {
 padding: 10px;
 border-radius: 25px;
 border: 2px solid #5F6C6D;
-background-color: powderblue;
+background-color: #B5e0e7;
 
 
 }
@@ -68,7 +68,7 @@ font-size: large;
 
 
 <body>
-<center><img id="logo" src=barterNFT_logo.png></img></center>
+<center><img id="logo" src=barterNFT_logo_721.png></img></center>
 
 <button style="color:#5F6C6D; font-family: helvetica narrow, sans-serif;font-size: x-large;  position:absolute; top:0; right:0;" onclick="open_window()">offer trade</button>
 <center><p id="contract_address_ID"></p></center>
