--- a/create_nft_swapx_polygon_add_live.html
+++ b/create_nft_swapx_polygon_add_live.html
@@ -153,7 +153,8 @@ display: block;
 <input type="text" class="your-nft" id="NFT_contract1" name="NFT_contract1" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:x-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:218; right:790;">NFT contract address 1</label>	
 <input type="text" class="your-nft1" id="NFT_Token_ID1" name="NFT_Token_ID1" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:x-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:253; right:790;">NFT contract token ID 1</label>		
 
-<input type="button" class="btn" value=" add to offer" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="to_approve()"/>
+<input type="button" class="btn" value=" approve" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="to_approve()"/>
+<input type="button" class="btn" value=" add to offer" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="add_to_offer()"/>
 
 
 <center style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;">their NFT</center>
@@ -1492,7 +1493,7 @@ var acct = (async function(){
 
 })()
 
-	add_to_offer();
+	//add_to_offer();
 	
 }
 
