--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1152,7 +1152,7 @@ var display = (async function(){
 	
 	var name = await new web3.eth.Contract(abi, contract_ID1).methods.name().call();
 	
-		canvas_4(contract_ID1, tokenID1, address, i, i, box2).catch(function(error){ canvas_3(contract_bal.methods.tokens_image1xy, i, address, j, 10, box1);})
+		canvas_4(contract_ID1, tokenID, address, i, i, box2).catch(function(error){ canvas_3(contract_bal.methods.tokens_image1xy, i, address, j, 10, box1);})
 		//canvas_4(contract_ID1, tokenID, address, i, i, box1);
 		
 		<!-- try { -->
