--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1157,7 +1157,7 @@ var display = (async function(){
 		
 		<!-- try { -->
 		<!-- //canvas_4(contract_ID1, tokenID, address, j, -10, box1); -->
-		canvas_4(contract_ID1, tokenID, address, i, i, box1).catch(function(error)){canvas_3(contract_bal.methods.tokens_image1xy, i, address, j, -10, box1); }
+		canvas_4(contract_ID1, tokenID, address, i, i, box1).catch(function(error)){canvas_3(contract_bal.methods.tokens_image1xy, i, address, j, -10, box1); })
 		
 			<!-- }catch(err){ -->
 		<!-- //canvas_4(contract_ID1, tokenID, address, j, -10, box1); -->
