--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1153,8 +1153,11 @@ var display = (async function(){
 	var name = await new web3.eth.Contract(abi, contract_ID1).methods.name().call();
 	
 		//canvas_4(contract_ID1, tokenID, address, i, i, box2).catch(function(error){ canvas_3(contract_bal.methods.tokens_image1xy, i, address, j, 10, box1);})
-		//canvas_4(contract_ID1, tokenID, address, i, i, box1);
-		
+		try{
+		canvas_4(contract_ID1, tokenID, address, i, i, box1);
+		}catch(err){ 
+		canvas_3(contract_bal.methods.tokens_image1xy, i, address, j, -10, box1);
+		}
 		<!-- try { -->
 		<!-- //canvas_4(contract_ID1, tokenID, address, j, -10, box1); -->
 		canvas_4(contract_ID1, tokenID, address, i, i, box1).catch(function(error)){canvas_3(contract_bal.methods.tokens_image1xy, i, address, j, -10, box1); }
@@ -1196,7 +1199,7 @@ var display = (async function(){
 	//console.log("array_token: " + tokenID2)
 	array_tokenID2.push(tokenID2);
 	
-	try
+	try{
 	canvas_4(contract_ID2, tokenID2, address, i, i, box2).catch(function(error){ canvas_3(contract_bal.methods.tokens_image2xy, i, address, j, 10, box2);}
 	}catch(err){
 	canvas_3(contract_bal.methods.tokens_image2xy, i, address, j, 10, box2);
