--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1200,7 +1200,8 @@ var display = (async function(){
 	array_tokenID2.push(tokenID2);
 	
 	try{
-	canvas_4(contract_ID2, tokenID2, address, i, i, box2).catch(function(error){ canvas_3(contract_bal.methods.tokens_image2xy, i, address, j, 10, box2);}
+	//canvas_4(contract_ID2, tokenID2, address, i, i, box2).catch(function(error){ canvas_3(contract_bal.methods.tokens_image2xy, i, address, j, 10, box2);}
+	canvas_4(contract_ID2, tokenID2, address, i, i, box2);
 	}catch(err){
 	canvas_3(contract_bal.methods.tokens_image2xy, i, address, j, 10, box2);
 	}
