--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1156,7 +1156,7 @@ var display = (async function(){
 		try{
 		canvas_4(contract_ID1, tokenID, address, i, i, box1);
 		}catch(err){ 
-		canvas_3(contract_bal.methods.tokens_image1xy, i, address, j, -10, box1);
+		canvas_5(contract_ID1, tokenID, address, i, i, box1);
 		}
 		<!-- try { -->
 		<!-- //canvas_4(contract_ID1, tokenID, address, j, -10, box1); -->
@@ -1203,7 +1203,7 @@ var display = (async function(){
 	//canvas_4(contract_ID2, tokenID2, address, i, i, box2).catch(function(error){ canvas_3(contract_bal.methods.tokens_image2xy, i, address, j, 10, box2);}
 	canvas_4(contract_ID2, tokenID2, address, i, i, box2);
 	}catch(err){
-	canvas_3(contract_bal.methods.tokens_image2xy, i, address, j, 10, box2);
+	canvas_5(contract_ID2, tokenID2, address, i, i, box2);
 	}
 	//canvas_4(contract_ID2, tokenID2, address, i, i, box2);
 	
@@ -1529,7 +1529,90 @@ var acct = (async function(){
 	
 }
 	
+
+
+	function canvas_5 (k, num1, addr, num2, n, bx){
+var acct = (async function(){
+//var _image = await k(num1, addr, num2).call();
+//const imgurl = _image //"https://gateway.pinata.cloud/ipfs/QmTLwrSf7fk8jzFRgVZ2r11pzMZQ87nAHYqDBzHEtrZiF5/10.jpg"
+	var contract_address = web3.utils.toChecksumAddress(k);
+	var contract_bal = await new web3.eth.Contract(abi, contract_address);
+    var lnk = await contract_bal.methods.tokenURI(num1).call();
   
+  if (lnk.substring(0,4) == "ipfs"){
+	lnk = 'https://ipfs.io/ipfs/' + lnk.slice(7)
+	}
+	
+	const params = { 'theUrl': lnk };
+	const metadata = await Moralis.Cloud.run("fetchJSON", params);
+
+	<!-- const str = JSON.stringify(metadata.data.image); -->
+	<!-- const bytes = new TextEncoder().encode(str); -->
+	<!-- const blob = new Blob([bytes], { -->
+		<!-- type: "application/json;charset=utf-8" -->
+	<!-- }); -->
+	
+	
+	var image_ = metadata.data.image
+	if (image_.substring(0,4) == "ipfs"){
+	image_ = 'https://ipfs.io/ipfs/' + image_.slice(7)
+	}
+	console.log("metadata_image" + image_)
+  //var urlCreator = window.URL || window.webkitURL;
+   //var imageUrl = urlCreator.createObjectURL(image_);
+   //const myImgElem = document.getElementById('my-img');
+   //var myImgElem = new Image;
+   
+   //myImgElem.src = imageUrl;
+   var img = new Image();
+	//img.crossOrigin="anonymous"
+	img.src = image_ //imageUrl
+	//img.crossOrigin="anonymous";
+	//ew1Div.addEventListener("load", getCanvas);
+	img.onload = function (){
+	
+		//var canvas = document.getElementById("myCanvas");
+		var canvas = document.createElement('canvas');
+		canvas.id = "b" + n;
+        var ctx = canvas.getContext('2d');
+		var width = img.width;
+		var height = img.height;
+
+ if (width > height) {
+    if (width > 75 ){
+      //height *= max_width / width;
+      height = Math.round(height *= 75 / width);
+      width = 75;
+    }
+  } else {
+    if (height > 75) {
+      //width *= max_height / height;
+      width = Math.round(width *= 75 / height);
+      height = 75;
+    }
+  }
+  
+  // resize the canvas and draw the image data into it
+  canvas.width = width;
+  canvas.height = height;
+  var ctx = canvas.getContext("2d");
+  ctx.drawImage(img, 0, 0, width, height);
+
+        ctx.drawImage(img, 0, 0, width, height);
+		bx.insertBefore(canvas, bx.children[0]);
+		//container.id = "cc" & i;
+		return canvas.toDataURL("image/*",0.2);
+		
+			
+			}
+	
+		
+   //ew1Div.appendChild(canvas1);
+  
+
+})()		
+	
+}	
 	//document.getElementById("thetable").appendChild(toAdd);
 
 
