--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1483,7 +1483,7 @@ var acct = (async function(){
 	//img.crossOrigin="anonymous"
 	img.src = image_ //imageUrl
 	//img.crossOrigin="anonymous";
-	img.setAttribute('crossOrigin', '');
+	img.setAttribute('crossOrigin', '*');
 	//ew1Div.addEventListener("load", getCanvas);
 	img.onload = function (){
 	
