--- a/create_nft_swapx_polygon_live_v3.html
+++ b/create_nft_swapx_polygon_live_v3.html
@@ -1129,7 +1129,7 @@ var display = (async function(){
 	var contract_ID1 = await contract_bal.methods.token_contracts_list1xy(i, address, j).call();
 	var tokenID = await contract_bal.methods.tokens_list1xy(i, address, j).call();
 	
-	var name = await new web3.eth.Contract(abi, contract_ID1).methods.name().call();
+	//var name = await new web3.eth.Contract(abi, contract_ID1).methods.name().call();
 	
 		//canvas_4(contract_ID1, tokenID, address, i, i, box2).catch(function(error){ canvas_3(contract_bal.methods.tokens_image1xy, i, address, j, 10, box1);})
 		try{
@@ -1168,7 +1168,7 @@ var display = (async function(){
 	array_contract_ID2.push("'" + contract_ID2 + "'");
 	
 	
-	var name2 = await new web3.eth.Contract(abi, contract_ID2).methods.name().call();
+	//var name2 = await new web3.eth.Contract(abi, contract_ID2).methods.name().call();
 	
 	
 	
