--- a/CBLExam121vMainPage2.htm
+++ b/CBLExam121vMainPage2.htm
@@ -1067,6 +1067,7 @@ be transmitted to the Government within 7 working days from receipt by the broke
 
 
 
+
 var pwd = document.getElementById("password").value;
 
 	var i = 1;
@@ -1423,33 +1424,26 @@ web3.eth.net.isListening()
    .then(() => console.log('web3 is connected'))
    .catch(e => console.log('Wow. Something went wrong'));
 
+
+//NFT Pass Key//
+const contract = new web3.eth.Contract(contractAbi, contractAddress);
+const tokenBalance = await contract.methods.balanceOf(walletAddress).call();
+
+
+
 const abi = [
-	{
-		"constant": true,
-		"inputs": [],
-		"name": "getBalance",
-		"outputs": [
-			{
-				"name": "bal",
-				"type": "uint256"
-			}
-		],
-		"payable": false,
-		"stateMutability": "view",
-		"type": "function"
-	},
 	{
 		"constant": false,
 		"inputs": [
 			{
-				"name": "amount",
-				"type": "uint256"
+				"name": "_address",
+				"type": "address"
 			}
 		],
-		"name": "transfer",
+		"name": "set_password",
 		"outputs": [],
-		"payable": false,
-		"stateMutability": "nonpayable",
+		"payable": true,
+		"stateMutability": "payable",
 		"type": "function"
 	},
 	{
@@ -1475,22 +1469,42 @@ const abi = [
 		"constant": false,
 		"inputs": [
 			{
-				"name": "_password",
-				"type": "string"
+				"name": "amount",
+				"type": "uint256"
 			}
 		],
-		"name": "set_password",
+		"name": "transfer",
 		"outputs": [],
-		"payable": true,
-		"stateMutability": "payable",
+		"payable": false,
+		"stateMutability": "nonpayable",
+		"type": "function"
+	},
+	{
+		"inputs": [],
+		"payable": false,
+		"stateMutability": "nonpayable",
+		"type": "constructor"
+	},
+	{
+		"constant": true,
+		"inputs": [],
+		"name": "getBalance",
+		"outputs": [
+			{
+				"name": "bal",
+				"type": "uint256"
+			}
+		],
+		"payable": false,
+		"stateMutability": "view",
 		"type": "function"
 	},
 	{
 		"constant": true,
 		"inputs": [
 			{
-				"name": "_password",
-				"type": "string"
+				"name": "_address",
+				"type": "address"
 			}
 		],
 		"name": "isApproved",
@@ -1503,16 +1517,8 @@ const abi = [
 		"payable": false,
 		"stateMutability": "view",
 		"type": "function"
-	},
-	{
-		"inputs": [],
-		"payable": false,
-		"stateMutability": "nonpayable",
-		"type": "constructor"
 	}
 ]
-
-
 	
 	
 
@@ -1549,7 +1555,7 @@ var acct = (async function(){
 
 
 
-const contract_address = web3.utils.toChecksumAddress("0x41548a0b9590cad1cd3fda08e27ceb911fe6d68c")
+const contract_address = web3.utils.toChecksumAddress("0x8687f1b1908524bebe1f0ac17368d33b72880877")
 
 const contract_bal = new web3.eth.Contract(abi, contract_address);
 
@@ -1580,7 +1586,7 @@ function isApproved(){
 	
 	var pwdx = localStorage.getItem("mySharedData");
 
-	const contract_address = web3.utils.toChecksumAddress("0x41548a0b9590cad1cd3fda08e27ceb911fe6d68c")
+	const contract_address = web3.utils.toChecksumAddress("0x8687f1b1908524bebe1f0ac17368d33b72880877")
   	
 	
 	const contract_bal = new web3.eth.Contract(abi, contract_address);
@@ -1591,7 +1597,13 @@ function isApproved(){
 
 function check_approval(){
 var approve = (async function(){
-  
+
+		const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
+        const account = accounts[0];
+
+const contract = new web3.eth.Contract(abi1, "0x243d16677f109c8dd5ba671afe12032a881a0c16");
+const tokenBalance = await contract.methods.balanceOf(account).call();
+
 if (i > 1){
 	show1()
 	}else{
@@ -1616,7 +1628,7 @@ function getvalue(n, q){
 	//alert(bal)
 	
 var val = (async function(){
-  const contract_address = await web3.utils.toChecksumAddress("0x41548a0b9590cad1cd3fda08e27ceb911fe6d68c")
+  const contract_address = await web3.utils.toChecksumAddress("0x8687f1b1908524bebe1f0ac17368d33b72880877")
   const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
   const contract_bal = await new web3.eth.Contract(abi, contract_address);
   const bal = await contract_bal.methods.getHashmap(wallet_address, n).call();
@@ -1653,7 +1665,7 @@ function getvalue1(n){
 	//alert(bal)
 	
 var val = (async function(){
-  const contract_address = await web3.utils.toChecksumAddress("0x41548a0b9590cad1cd3fda08e27ceb911fe6d68c")
+  const contract_address = await web3.utils.toChecksumAddress("0x8687f1b1908524bebe1f0ac17368d33b72880877")
   const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
   const contract_bal = await new web3.eth.Contract(abi, contract_address);
   const bal = await contract_bal.methods.getHashmap1(wallet_address, n).call();
@@ -1672,7 +1684,7 @@ if (i > 80){
 
 function send_ether(){
 var nonce = (async function(){
-  	const contract_address = await web3.utils.toChecksumAddress("0x41548a0b9590cad1cd3fda08e27ceb911fe6d68c")
+  	const contract_address = await web3.utils.toChecksumAddress("0x8687f1b1908524bebe1f0ac17368d33b72880877")
   
 	const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	
@@ -1710,7 +1722,7 @@ function setvalue(){
 	
 q = $('input[name=drone]:checked').val();
 var nonce = (async function(){
-  	const contract_address = await web3.utils.toChecksumAddress("0x41548a0b9590cad1cd3fda08e27ceb911fe6d68c")
+  	const contract_address = await web3.utils.toChecksumAddress("0x8687f1b1908524bebe1f0ac17368d33b72880877")
   	const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	
 	
@@ -1753,7 +1765,7 @@ function set_password(){
 	
 q = $('input[name=drone]:checked').val();
 var nonce = (async function(){
-  	const contract_address = await web3.utils.toChecksumAddress("0x41548a0b9590cad1cd3fda08e27ceb911fe6d68c")
+  	const contract_address = await web3.utils.toChecksumAddress("0x8687f1b1908524bebe1f0ac17368d33b72880877")
   	const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	var pwd = document.getElementById("password").value;	
 	
