--- a/CBLExam121vMainPage2.htm
+++ b/CBLExam121vMainPage2.htm
@@ -1426,8 +1426,8 @@ web3.eth.net.isListening()
 
 
 //NFT Pass Key//
-const contract = new web3.eth.Contract(contractAbi, contractAddress);
-const tokenBalance = await contract.methods.balanceOf(walletAddress).call();
+//const contract = new web3.eth.Contract(contractAbi, contractAddress);
+//const tokenBalance = await contract.methods.balanceOf(walletAddress).call();
 
 
 
